# VS_AI

./: .env.example  .gitignore  AGENTS.md  AI对接手册.md  README.md  V1升级方案.md  V2升级方案.md  pyproject.toml  requirements.txt  交接备忘录.md  工程手册.md  用户操作手册.md
.github/workflows/: backfill-report.yml  collect-report.yml  compensate-report.yml  delivery-canary.yml  (+10 more)
config/: providers.yaml  schedules.yaml
docs/: ARCHITECTURE.md  DEEPSEEK_SETUP.md  HANDOFF.md  OPS_RUNBOOK.md  TECHNICAL_GUIDE.md  USER_GUIDE.md  feed.json  index.html  push-channels-guide.md  rss.xml  search-index.json
scripts/: bootstrap.ps1  bootstrap.sh  check-workflows.ps1  cleanup-ignored-temp-acl.ps1  smoke-litellm-gateway.ps1  smoke-run-once-via-litellm.ps1  start-litellm-gateway.ps1
tests/: test_ai_pipeline.py  test_analysis.py  test_briefing.py  test_cli_smoke.py  test_dedup.py  test_delivery_status.py  test_discovery_search.py  test_domains.py  test_feishu.py  test_hn.py  test_intelligence.py  test_langfuse_tracing.py  test_lark_cli_sidecar.py  test_llm_client.py  test_observability.py  test_ops_dashboard.py  test_pages_builder.py  test_prompt_evaluator.py  test_prompt_loader.py  test_pushplus.py  test_renderers.py  test_review_queue.py  test_run_once.py  test_run_status_risk.py  test_scoring.py  test_scoring_llm.py  test_settings.py  test_source_candidate_validation.py  test_source_governance_output.py  test_source_health.py  test_source_registry.py  test_source_updates.py  test_sources.py  test_telegram.py  test_topic_builder.py  test_watch_runner.py  test_workflow_guard.py  test_workflows.py
(+20512 files in other folders)
